--- a/robert_baxter_C971_/robert_baxter_C971_/robert_baxter_C971_.csproj
+++ b/robert_baxter_C971_/robert_baxter_C971_/robert_baxter_C971_.csproj
@@ -19,7 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Views\Dashboard.xaml">
+    <EmbeddedResource Update="Views\CourseAdd.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\CourseEdit.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\GadgetAdd.xaml">
