--- a/robert_baxter_C971_/robert_baxter_C971_/robert_baxter_C971_.csproj
+++ b/robert_baxter_C971_/robert_baxter_C971_/robert_baxter_C971_.csproj
@@ -22,6 +22,9 @@
     <EmbeddedResource Update="Views\AssessmentAdd.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\AssessmentEdit.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\CourseAdd.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
