everything except course status

--- a/robert_baxter_C971_/robert_baxter_C971_.Android/robert_baxter_C971_.Android.csproj
+++ b/robert_baxter_C971_/robert_baxter_C971_.Android/robert_baxter_C971_.Android.csproj
@@ -94,4 +94,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionrobert_baxter_C971_AndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
